Assign Shortcut bug #59474

Closed
opened 2018-12-16 22:51:01 +01:00 by Misha · 9 comments

System Information

Operating system:
Kubuntu 18.10

Graphics card:
AMD FirePro w7000
renderer: 'AMD PITCAIRN (DRM 2.50.0, 4.18.0-12-generic, LLVM 7.0.0)'
vendor: 'X.Org'
version: '4.5 (Core Profile) Mesa 18.2.2'

Blender Version
version: 2.80 (sub 37), branch: blender2.8, commit date: 2018-12-16 18:53, hash: ea33b90a1b, type: Release
build date: 2018-12-16, 21:58:58
platform: Linux

Short description of error
When trying to set < key as a shortcut blender crashes

Exact steps for others to reproduce the error

  • Open Blender
  • Right_click
  • Assign Shortcut
  • Press < on a keyboard
  • Blender crashes
    Screenshot_20181216_221809.png
    system-info.txt
**System Information** **Operating system:** Kubuntu 18.10 **Graphics card:** AMD FirePro w7000 renderer: 'AMD PITCAIRN (DRM 2.50.0, 4.18.0-12-generic, LLVM 7.0.0)' vendor: 'X.Org' version: '4.5 (Core Profile) Mesa 18.2.2' **Blender Version** version: 2.80 (sub 37), branch: blender2.8, commit date: 2018-12-16 18:53, hash: ea33b90a1bf, type: Release build date: 2018-12-16, 21:58:58 platform: Linux **Short description of error** When trying to set < key as a shortcut blender crashes **Exact steps for others to reproduce the error** - Open Blender - Right_click - Assign Shortcut - Press < on a keyboard - Blender crashes ![Screenshot_20181216_221809.png](https://archive.blender.org/developer/F5974573/Screenshot_20181216_221809.png) [system-info.txt](https://archive.blender.org/developer/F5974608/system-info.txt)
Author

Added subscriber: @shomyshomy

Added subscriber: @shomyshomy

#64067 was marked as duplicate of this issue

#64067 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can reproduce this.
Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x000055555706127e in WM_keymap_map_type_get (kmi=0x0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_keymap.c:210
210		if (ISTIMER(kmi->type)) {
(gdb) bt
#0  0x000055555706127e in WM_keymap_map_type_get (kmi=0x0)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_keymap.c:210
#1  0x000055555830a4ab in rna_wmKeyMapItem_map_type_get (ptr=0x7fffffffd920)
    at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_wm.c:821
#2  0x000055555830a62b in rna_KeyMapItem_type_itemf (UNUSED_C=0x7fffefc30288, ptr=0x7fffffffd920, UNUSED_prop=0x55555d61f480 <rna_KeyMapItem_type>, 
    UNUSED_r_free=0x7fffffffd4c3) at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_wm.c:883
#3  0x0000555558124659 in RNA_property_enum_items_ex (C=0x7fffefc30288, ptr=0x7fffffffd920, prop=0x55555d61f480 <rna_KeyMapItem_type>, use_static=false, 
    r_item=0x7fffffffd4d8, r_totitem=0x0, r_free=0x7fffffffd4c3)
    at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_access.c:1429
#4  0x000055555812477f in RNA_property_enum_items (C=0x7fffefc30288, ptr=0x7fffffffd920, prop=0x55555d61f480 <rna_KeyMapItem_type>, r_item=0x7fffffffd4d8, 
    r_totitem=0x0, r_free=0x7fffffffd4c3) at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_access.c:1455
#5  0x00005555581247cc in RNA_property_enum_items_gettexted (C=0x7fffefc30288, ptr=0x7fffffffd920, prop=0x55555d61f480 <rna_KeyMapItem_type>, 
    r_item=0x7fffffffd4d8, r_totitem=0x0, r_free=0x7fffffffd4c3)
    at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_access.c:1514
#6  0x00005555573aa5fb in ui_item_rna_size (layout=0x7fffd237cb08, name=0x55555bc70ce8 "", icon=0, ptr=0x7fffffffd920, 
    prop=0x55555d61f480 <rna_KeyMapItem_type>, index=-1, icon_only=false, compact=false, r_w=0x7fffffffd560, r_h=0x7fffffffd564)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_layout.c:1502
#7  0x00005555573aae50 in uiItemFullR (layout=0x7fffd237cb08, ptr=0x7fffffffd920, prop=0x55555d61f480 <rna_KeyMapItem_type>, index=-1, value=0, flag=320, 
    name=0x55555bc70ce8 "", icon=0) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_layout.c:1664
#8  0x00005555573abd64 in uiItemR (layout=0x7fffd237cb08, ptr=0x7fffffffd920, propname=0x55555bc70ce9 "type", flag=320, name=0x55555bc70ce8 "", icon=0)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_layout.c:1887
#9  0x00005555574033d5 in menu_add_shortcut (C=0x7fffefc30288, ar=0x7fffe8f87cc8, arg=0x7fffd4574508)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_context_menu.c:162
#10 0x00005555573c6881 in ui_popup_block_refresh (C=0x7fffefc30288, handle=0x7fffd4b190c8, butregion=0x0, but=0x0)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_region_popup.c:489
#11 0x00005555573c6167 in ui_block_region_refresh (C=0x7fffefc30288, ar=0x7fffe8f87cc8)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_region_popup.c:327
#12 0x0000555557049564 in wm_draw_window_offscreen (C=0x7fffefc30288, win=0x7fffeaacb888, stereo=false)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:602
#13 0x00005555570499ce in wm_draw_window (C=0x7fffefc30288, win=0x7fffeaacb888)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:712
#14 0x0000555557049eda in wm_draw_update (C=0x7fffefc30288)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:866
- 15 0x0000555557046b91 in WM_main (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:433
- 16 0x00005555570414de in main (argc=1, argv=0x7fffffffdcf8) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:521

I can reproduce this. Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x000055555706127e in WM_keymap_map_type_get (kmi=0x0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_keymap.c:210 210 if (ISTIMER(kmi->type)) { (gdb) bt #0 0x000055555706127e in WM_keymap_map_type_get (kmi=0x0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_keymap.c:210 #1 0x000055555830a4ab in rna_wmKeyMapItem_map_type_get (ptr=0x7fffffffd920) at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_wm.c:821 #2 0x000055555830a62b in rna_KeyMapItem_type_itemf (UNUSED_C=0x7fffefc30288, ptr=0x7fffffffd920, UNUSED_prop=0x55555d61f480 <rna_KeyMapItem_type>, UNUSED_r_free=0x7fffffffd4c3) at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_wm.c:883 #3 0x0000555558124659 in RNA_property_enum_items_ex (C=0x7fffefc30288, ptr=0x7fffffffd920, prop=0x55555d61f480 <rna_KeyMapItem_type>, use_static=false, r_item=0x7fffffffd4d8, r_totitem=0x0, r_free=0x7fffffffd4c3) at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_access.c:1429 #4 0x000055555812477f in RNA_property_enum_items (C=0x7fffefc30288, ptr=0x7fffffffd920, prop=0x55555d61f480 <rna_KeyMapItem_type>, r_item=0x7fffffffd4d8, r_totitem=0x0, r_free=0x7fffffffd4c3) at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_access.c:1455 #5 0x00005555581247cc in RNA_property_enum_items_gettexted (C=0x7fffefc30288, ptr=0x7fffffffd920, prop=0x55555d61f480 <rna_KeyMapItem_type>, r_item=0x7fffffffd4d8, r_totitem=0x0, r_free=0x7fffffffd4c3) at /home/zed/programmering/blender_master/blender/source/blender/makesrna/intern/rna_access.c:1514 #6 0x00005555573aa5fb in ui_item_rna_size (layout=0x7fffd237cb08, name=0x55555bc70ce8 "", icon=0, ptr=0x7fffffffd920, prop=0x55555d61f480 <rna_KeyMapItem_type>, index=-1, icon_only=false, compact=false, r_w=0x7fffffffd560, r_h=0x7fffffffd564) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_layout.c:1502 #7 0x00005555573aae50 in uiItemFullR (layout=0x7fffd237cb08, ptr=0x7fffffffd920, prop=0x55555d61f480 <rna_KeyMapItem_type>, index=-1, value=0, flag=320, name=0x55555bc70ce8 "", icon=0) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_layout.c:1664 #8 0x00005555573abd64 in uiItemR (layout=0x7fffd237cb08, ptr=0x7fffffffd920, propname=0x55555bc70ce9 "type", flag=320, name=0x55555bc70ce8 "", icon=0) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_layout.c:1887 #9 0x00005555574033d5 in menu_add_shortcut (C=0x7fffefc30288, ar=0x7fffe8f87cc8, arg=0x7fffd4574508) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_context_menu.c:162 #10 0x00005555573c6881 in ui_popup_block_refresh (C=0x7fffefc30288, handle=0x7fffd4b190c8, butregion=0x0, but=0x0) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_region_popup.c:489 #11 0x00005555573c6167 in ui_block_region_refresh (C=0x7fffefc30288, ar=0x7fffe8f87cc8) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_region_popup.c:327 #12 0x0000555557049564 in wm_draw_window_offscreen (C=0x7fffefc30288, win=0x7fffeaacb888, stereo=false) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:602 #13 0x00005555570499ce in wm_draw_window (C=0x7fffefc30288, win=0x7fffeaacb888) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:712 #14 0x0000555557049eda in wm_draw_update (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_draw.c:866 - 15 0x0000555557046b91 in WM_main (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:433 - 16 0x00005555570414de in main (argc=1, argv=0x7fffffffdcf8) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:521 ```
Sebastian Parborg self-assigned this 2018-12-17 10:58:36 +01:00
Sebastian Parborg removed their assignment 2018-12-17 14:11:15 +01:00
Campbell Barton was assigned by Sebastian Parborg 2018-12-17 14:11:15 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This seems to be a regression as this crash didn't happen prior to https://developer.blender.org/rB4357fb6.
However, previously it was not possible to bind non ANSI keys like "<" or åäö. Now these crashes blender if you attempt to bind them to anything.

@ideasman42 I don't know how blender looks up keycodes, but I'm guessing that keys that are not defined in blender/windowmanager/wm_event_types.h will crash. I'm guessing that there are some keyboard character input conversion going on as this problem wouldn't happen if we looked a raw keycodes.

This seems to be a regression as this crash didn't happen prior to https://developer.blender.org/rB4357fb6. However, previously it was not possible to bind non ANSI keys like "<" or åäö. Now these crashes blender if you attempt to bind them to anything. @ideasman42 I don't know how blender looks up keycodes, but I'm guessing that keys that are not defined in `blender/windowmanager/wm_event_types.h` will crash. I'm guessing that there are some keyboard character input conversion going on as this problem wouldn't happen if we looked a raw keycodes.

Added subscriber: @Phil47

Added subscriber: @Phil47

This issue was referenced by 0d2e7f2106

This issue was referenced by 0d2e7f210635955107c994e93ea10f70fe61a37c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59474
No description provided.