Fix T59474: Crash assign shortcuts